@@ -32,6 +32,7 @@ import io.axual.ksml.data.schema.ListSchema;
 import io.axual.ksml.data.schema.StructSchema;
 import io.axual.ksml.data.type.EnumType;
 import io.axual.ksml.exception.ExecutionException;
+import org.assertj.core.api.InstanceOfAssertFactories;
 import org.junit.jupiter.api.Test;
 
 import java.util.List;
@@ -53,8 +54,8 @@ class NativeDataSchemaMapperTest {
         var result = (Map<?, ?>) mapper.fromDataSchema(schema);
 
         var fields = (List<?>) result.get("fields");
-        var fieldMap = (Map<?, ?>) fields.get(0);
-        assertThat(fieldMap.get("defaultValue")).isEqualTo(true);
+        var fieldMap = (Map<?, ?>) fields.getFirst();
+        assertThat((Boolean) fieldMap.get("defaultValue")).isTrue();
     }
 
     @Test
@@ -65,8 +66,8 @@ class NativeDataSchemaMapperTest {
         var result = (Map<?, ?>) mapper.fromDataSchema(schema);
 
         var fields = (List<?>) result.get("fields");
-        var fieldMap = (Map<?, ?>) fields.get(0);
-        assertThat(fieldMap.get("defaultValue")).isEqualTo(false);
+        var fieldMap = (Map<?, ?>) fields.getFirst();
+        assertThat((Boolean) fieldMap.get("defaultValue")).isFalse();
     }
 
     @Test
@@ -77,8 +78,9 @@ class NativeDataSchemaMapperTest {
         var result = (Map<?, ?>) mapper.fromDataSchema(schema);
 
         var fields = (List<?>) result.get("fields");
-        var fieldMap = (Map<?, ?>) fields.get(0);
-        assertThat(fieldMap.get("defaultValue")).isEqualTo(List.of());
+        var fieldMap = (Map<?, ?>) fields.getFirst();
+        assertThat(fieldMap).asInstanceOf(InstanceOfAssertFactories.map(String.class, Object.class))
+                .containsEntry("defaultValue", List.of());
     }
 
     @Test
@@ -92,8 +94,9 @@ class NativeDataSchemaMapperTest {
         var result = (Map<?, ?>) mapper.fromDataSchema(schema);
 
         var fields = (List<?>) result.get("fields");
-        var fieldMap = (Map<?, ?>) fields.get(0);
-        assertThat(fieldMap.get("defaultValue")).isEqualTo(List.of("a", "b"));
+        var fieldMap = (Map<?, ?>) fields.getFirst();
+        assertThat(fieldMap).asInstanceOf(InstanceOfAssertFactories.map(String.class, Object.class))
+                .containsEntry("defaultValue", List.of("a", "b"));
     }
 
     @Test
@@ -107,8 +110,9 @@ class NativeDataSchemaMapperTest {
         var result = (Map<?, ?>) mapper.fromDataSchema(schema);
 
         var fields = (List<?>) result.get("fields");
-        var fieldMap = (Map<?, ?>) fields.get(0);
-        assertThat(fieldMap.get("defaultValue")).isEqualTo("AREA");
+        var fieldMap = (Map<?, ?>) fields.getFirst();
+        assertThat(fieldMap).asInstanceOf(InstanceOfAssertFactories.map(String.class, Object.class))
+                .containsEntry("defaultValue", "AREA");
     }
 
     @Test
@@ -119,8 +123,9 @@ class NativeDataSchemaMapperTest {
         var result = (Map<?, ?>) mapper.fromDataSchema(schema);
 
         var fields = (List<?>) result.get("fields");
-        var fieldMap = (Map<?, ?>) fields.get(0);
-        assertThat(fieldMap.get("defaultValue")).isEqualTo(Map.of());
+        var fieldMap = (Map<?, ?>) fields.getFirst();
+        assertThat(fieldMap).asInstanceOf(InstanceOfAssertFactories.map(String.class, Object.class))
+                .containsEntry("defaultValue", Map.of());
     }
 
     @Test
@@ -134,8 +139,9 @@ class NativeDataSchemaMapperTest {
         var result = (Map<?, ?>) mapper.fromDataSchema(schema);
 
         var fields = (List<?>) result.get("fields");
-        var fieldMap = (Map<?, ?>) fields.get(0);
-        assertThat(fieldMap.get("defaultValue")).isEqualTo(Map.of("key1", "val1", "key2", "val2"));
+        var fieldMap = (Map<?, ?>) fields.getFirst();
+        assertThat(fieldMap).asInstanceOf(InstanceOfAssertFactories.map(String.class, Object.class))
+                .containsEntry("defaultValue", Map.of("key1", "val1", "key2", "val2"));
     }
 
     @Test
